implemented notifications.  ensured that a users hold is removed when they borrow an item.